# levitation-board

./: .gitignore  CMakeLists.txt  checkme  platformio.ini  run_all.sh
mock/firmware/: adc_etc.cpp  guidance_board.cpp
src/: adc_config.h  adc_isr.cpp  adc_isr.h  airgap_transition.cpp  airgap_transition.h  assert_err.cpp  control.cpp  control.h  defaults.h  feedthrough_mosfet.h  handle_heartbeat.cpp  main.cpp  precharge_mosfet.h  pwm_brake.cpp  pwm_brake.h  pwm_config.h  sdc_brake.h  xbar_config.h
src/can/: can.cpp  can.hpp
src/canzero/: canzero.cpp  canzero.h
src/firmware/: adc_etc.cpp  ain_scheduler.h  guidance_board.cpp  guidance_board.h  magnet_pwm.h  pinout.h  pwm.cpp  pwm.h  xbar.cpp
src/fsm/: control_state.cpp  error_handling.cpp  error_handling.h  fsm.cpp  fsm.h  idle_state.cpp  init_state.cpp  precharge_state.cpp  ready_state.cpp  start_state.cpp  states.h  stop_state.cpp
src/fsm/states/: arming45.cpp  control.cpp  disarming45.cpp  idle.cpp  init.cpp  precharge.cpp  ready.cpp  start.cpp  stop.cpp
src/sensors/: airgaps.cpp  airgaps.h  input_current.cpp  input_current.h  magnet_current.cpp  magnet_current.h  magnet_temperatures.cpp  magnet_temperatures.h  mcu_temperature.cpp  mcu_temperature.h  vdc.cpp  vdc.h
src/sensors/formula/: current_sense.h  displacement420.h  ntc_beta.h  ptx.h
src/util/: boxcar.h  circular_queue.h  csv.h  dist_estimation.h  ema.h  heap.h  lina.h  metrics.h  pid_controller.h  rectange_integral.h  timestamp.h  timimg.h
